frontend/tests/cases/negative/polymorphism/badExistential.gr
import Existential

unpack : forall {t : Type, f : Type -> Type, a : Type} . Exists f -> (f t -> a) -> a
unpack (MkExists x) f = f x
